--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -45,6 +45,13 @@
 }
 
 
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
