swap all _ by - in card classes

--- a/CSS_advanced/styles/24-style.css
+++ b/CSS_advanced/styles/24-style.css
@@ -109,6 +109,25 @@ a:active {
 }
 
 
+.card-services .card-title {
+    margin: 0;
+}
+
+
+.card-services a {
+    display: block;
+    padding: 2rem;
+    background-color: var(--color-light-grey);
+}
+
+
+.card-services a:hover {
+    color: var(--color-white);
+    background-color: var(--color-primary);
+    text-decoration: none;
+}
+
+
 .section {
     padding: var(--section-padding);
 }
@@ -236,23 +255,4 @@ ul.row {
 
 .social-link > svg {
     fill: var(--text-color);
-}
-
-
-.card_services .card-title {
-    margin: 0;
-}
-
-
-.card_services a {
-    display: block;
-    padding: 2rem;
-    background-color: var(--color-light-grey);
-}
-
-
-.card_services a:hover {
-    color: var(--color-white);
-    background-color: var(--color-primary);
-    text-decoration: none;
 }
